[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Christian Adåker <cadaker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc2023"

[[bin]]
name = "day01"

[[bin]]
name = "day02"

[[bin]]
name = "day03"

[[bin]]
name = "day04"

[[bin]]
name = "day05"

[[bin]]
name = "day06"

[[bin]]
name = "day07"

[[bin]]
name = "day08"

[[bin]]
name = "day09"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[[bin]]
name = "day14"

[[bin]]
name = "day15"

[[bin]]
name = "day16"

[[bin]]
name = "day17"

[[bin]]
name = "day18"

[[bin]]
name = "day19"

[[bin]]
name = "day20"

[[bin]]
name = "day21"

[[bin]]
name = "day22"

[[bin]]
name = "day23"

[[bin]]
name = "day24"

[[bin]]
name = "day25"

[dependencies]
priority-queue = "1.3.2"
regex = "1.10.2"
num-rational = "0.4.1"
num-bigint = "0.4.4"
num-traits = "0.2.17"
